--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
-    implementation "com.github.bumptech.glide:glide:4.11.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.10"
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.7.20'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
